--- a/wp-content/themes/manicare/style.css
+++ b/wp-content/themes/manicare/style.css
@@ -419,134 +419,36 @@ h2.page-description {
 ----------------------------------------------- */
 
 .main-navigation {
-	display: block;
-	float: left;
+	position: fixed;
 	width: 100%;
+	height: 70px;
+	top: 0;
+	left: 0;
 	font-family: georgia, arial;
 	text-transform:uppercase;
-	background:#000;
+	background:black;
 	z-index: 99999;
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	clear:left;
 	font-size:14px;
 }
 
-.main-navigation a{
-	color:#fff;
-}
 .main-navigation ul {
-	float: right;
-    list-style: none;
-    padding-left: 0;
-    position: relative;
-    right: 10%;
+  display: inline-block;
+  list-style: none;
+  position: absolute;
+  right: 10px;
 }
 .main-navigation ul li {
 	display: inline-block;
 	position: relative;
-	left: 50%;
-}
-.main-navigation ul li:after {
-	color: #666;
-	content: "|";
-	display: inline;
-	font-size: 12px;
-	margin: 0 0 0 17px;
-	font-style:italic;
-}
-.main-navigation ul li:last-child:after {
-	content: normal;
-	margin: 0;
-	padding: 0;
-}
-.main-navigation ul ul li {
-	float: left;
-	left: auto;
-	font-style:normal;
-}
-.main-navigation ul a {
-	display: inline-block;
-	text-decoration: none;
-	padding: 10px 6px 10px 21px;
-	font-style:normal;
-}
-.main-navigation ul ul a {
-	color: #999;
-}
-.main-navigation ul ul {
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
-	background: #000;
-	display: none;
-	float: left;
-	position: absolute;
-		top: auto;
-		left: 10px;
-		right: auto;
-	text-align: left;
-	z-index: 99999;
+	margin-right: 2em;
 }
 
-.main-navigation ul ul ul {
-	left: 100%;
-	top: 0;
-}
-.main-navigation ul ul a {
-	width: 150px;
-	font-size: 15px;
-	padding: 7px 15px;
-}
-.main-navigation ul ul li:after {
-	content: normal;
-	margin: 0;
-	padding: 0;
-}
-.main-navigation li:hover > a {
-	color: #999;
-}
-.main-navigation ul ul :hover > a {
+.main-navigation ul li a {
 	color: #fff;
-}
-.main-navigation ul ul a:hover {
-}
-.main-navigation ul li:hover > ul {
-	display: block;
-}
-.main-navigation li.current_page_item a,
-.main-navigation li.current-menu-item a {
-	color: #999;
 }
 
-/* Small menu */
-.main-small-navigation {
-	background:#000;
-	margin: 0;
-	padding: 0.5em 0 0;
-	z-index:99999;
-	position:fixed;
-	width:100%;
-}
-.menu-toggle {
-	color: #fff;
-	cursor: pointer;
-	font-size: 20px;
-	text-align: center;
-}
-.main-small-navigation .menu {
-	display: none;
-}
-.main-small-navigation .menu,
-.main-small-navigation .menu a {
-	color: #fff;
-}
-.main-small-navigation ul{
-	z-index:9999;
-}
-.main-small-navigation ul li{
-	list-style-type:none;
+.main-navigation ul li.current-menu-item a {
+	color: green;
 }
 
 /* =Content
@@ -615,20 +517,36 @@ h2.page-description {
 /* =Homepage template
 ----------------------------------------------- */
 
-#intro{
-	margin:0 0 40px 0;
-	padding:0 0 20px;
-	border-bottom:1px solid #e6e6e6;
-	text-align:center;
-	overflow:hidden;
-	font-family: georgia, serif;
+.homepage-full {
+	z-index: -99999;
+	background: url(images/bg.jpg) no-repeat center center fixed; 
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
+	  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/bg.jpg', sizingMethod='scale');
+	  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/bg.jpg', sizingMethod='scale')";
+
+	 /* Set rules to fill background */
+	  min-height: 100%;
+	  min-width: 1024px;
+
+	  /* Set up proportionate scaling */
+	  width: 100%;
+	  height: auto;
+
+	  /* Set up positioning */
+	  position: fixed;
+	  top: 0;
+	  left: 0;
 }
-#intro p{
-	padding:0 0 40px 0;
-	margin:0;
-	}
 
-
+.homepage-full .homepage-content {
+	position: relative;
+	margin: 0 auto;
+	text-align: center;
+	padding-top: 200px;
+}
 
 /* =Asides
 ----------------------------------------------- */
@@ -751,21 +669,6 @@ object {
 	margin:30px 0 60px 50px;
 }
 #right-sidebar{
-	float:right;
-	width:30%;
-	margin:30px 0 60px;
-}
-#homepage-left-sidebar{
-	float:left;
-	width:30%;
-	margin:30px 0 60px;
-}
-#homepage-middle-sidebar{
-	float:left;
-	width:30%;
-	margin:30px 0 60px 50px;
-}
-#homepage-right-sidebar{
 	float:right;
 	width:30%;
 	margin:30px 0 60px;
@@ -1009,12 +912,6 @@ object {
 		margin:30px 0 60px 50px;
 	}
 
-	#homepage-middle-sidebar{
-		float:left;
-		width:25%;
-		margin:30px 0 60px 50px;
-	}
-
 }
 @media only screen and (max-width: 768px) {
 
@@ -1038,21 +935,6 @@ object {
 		margin:30px 0 60px;
 	}
 	#right-sidebar{
-		float:none;
-		width:100%;
-		margin:30px 0 60px;
-	}
-	#homepage-left-sidebar{
-		float:none;
-		width:100%;
-		margin:30px 0 60px;
-	}
-	#homepage-middle-sidebar{
-		float:none;
-		width:100%;
-		margin:30px 0 60px;
-	}
-	#homepage-right-sidebar{
 		float:none;
 		width:100%;
 		margin:30px 0 60px;
